--- a/main.scss
+++ b/main.scss
@@ -15,16 +15,25 @@ $white: white;
   }
 }
 
+html {
+  height: 100%;
+}
+
 body {
   background-color: $bg-color;
   box-sizing: border-box;
   font-family: sans-serif;
+  height: 100%;
 }
 
 .container {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  height: 100%;
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
 }
 
 .clock-area {
@@ -32,11 +41,14 @@ body {
   flex-direction: column;
   align-items: center;
   flex: 2;
+  @media (max-width: 910px) {
+    flex: 1;
+  }
 }
 
 .clock-container {
   background-size: cover;
-  margin: 100px 0 50px;
+  margin: 0 0 50px;
   border: 5px solid $fg-color;
   background-color: $white;
   border-radius: 50%;
@@ -44,63 +56,102 @@ body {
   padding: 5px;
   width: 400px;
   height: 400px;
-  img {
-    width: 100%;
-    border-radius: 50%;
-    height: 100%;
+  // @media(max-width : 910px) {
+  //   width: 300px;
+  //   height: 300px;
+  // }
+  // img {
+  //   width: 100%;
+  //   border-radius: 50%;
+  //   height: 100%;
+  // }
+  .digit {
+    position: absolute;
+    z-index: 100;
+    margin: 0;
+    padding: 0;
+    color: $fg-color;
+    font-size: 64px;
+  }
+  .twelve {
+    top: 0;
+    left: 42%;
+  }
+  .three {
+    right: 2%;
+    top: 41%;
+  }
+  .six {
+    bottom: 0;
+    left: 46%;
+  }
+  .nine {
+    left: 2%;
+    top: 41%;
   }
   #seconds {
     background: $fg-color;
-    height: 45%;
-    left: 49.5%;
+    height: 40%;
+    left: 50%;
     position: absolute;
-    top: 14%;
+    top: 17.5%;
     transform-origin: 50% 80%;
-    width: 1%;
-    z-index: 8;
+    width: 0.5%;
+    z-index: 4;
   }
   #minutes {
     background: $fg-color;
     height: 45%;
-    left: 49.5%;
+    left: 49.7%;
     position: absolute;
-    top: 14%;
+    top: 13.3%;
     transform-origin: 50% 80%;
-    width: 1.5%;
-    z-index: 10;
+    width: 1.1%;
+    z-index: 3;
   }
   #hours {
     background: $fg-color;
-    height: 50%;
+    height: 30%;
     left: 49.5%;
     position: absolute;
-    top: 14%;
+    top: 25.5%;
     transform-origin: 50% 80%;
-    width: 1.5%;
-    z-index: 12;
+    width: 1.6%;
+    z-index: 2;
   }
-  #milli-seconds{
-    background: black;
-    height: 50%;
+  #milli-seconds {
+    height: 25%;
     left: 49.5%;
     position: absolute;
-    top: 14%;
+    top: 29.27%;
     transform-origin: 50% 80%;
-    width: 1.5%;
-    z-index: 20;
+    border : 0.5px dashed $fg-color;
+    z-index: 5;
   }
-  .digital-time{
+  .needles-center{
+    border-radius: 50%;
+    width : 15px;
+    height: 15px;
+    background : black;
+    position: absolute;
+    top : 47.5%;
+    left : 48.5%;
+    z-index : 6;
+  }
+  .digital-time {
     height: 5%;
-    left: 40.5%;
+    left: 38%;
     position: absolute;
-    border : 1px solid $fg-color;
+    border: 1px solid $fg-color;
     bottom: 27%;
+    color : $fg-color;
+    font-size: 18px;
     transform-origin: 50% 80%;
+    padding : 4px 3px;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 22%;
-    z-index: 12;
   }
 }
 
@@ -132,7 +183,7 @@ body {
   }
   .disabled-button {
     @include button(lighten($color: black, $amount: 15));
-    &:hover{
+    &:hover {
       cursor: not-allowed;
     }
   }
@@ -143,8 +194,8 @@ body {
 }
 
 .laps-container {
-  width: 250px;
-  height: 400px;
+  width: 80%;
+  height: 550px;
   border-radius: 10px;
   box-shadow: 4px 4px 0 0 darken($color: $bg-color, $amount: 5);
   background-color: $white;
@@ -163,24 +214,34 @@ body {
   color: $fg-color;
   padding: 10px 5px;
   font-size: 20px;
-  width: 182px;
+  width: 60%;
   margin-top: 10px;
   height: 75%;
+  text-align: center;
   overflow-y: scroll;
-  .no-lap-msg{
-      font-size: 14px;
-      color : $reset-color;
-      text-align: center;
+  .no-lap-msg {
+    font-size: 14px;
+    color: $reset-color;
+    text-align: center;
   }
   &-item {
     background-color: $text-color;
     padding: 10px 20px;
     border-radius: 20px;
     margin: 7px 0;
+    justify-content: center;
+    display: flex;
+    @media (max-width: 1159px) {
+      font-size: 16px;
+    }
+    @media (max-width: 1017px) {
+      font-size: 13px;
+    }
   }
   .fa-times {
     display: inline-block;
     margin-left: 15px;
+    margin-right: 10px;
     color: $reset-color;
     &:hover {
       cursor: pointer;
