--- a/main.scss
+++ b/main.scss
@@ -5,7 +5,6 @@ $start-color: #28a745;
 $pause-color: #ffc107;
 $laps-color: #007bff;
 $reset-color: #dc3545;
-$needle-color: #14100f;
 $white: white;
 
 @mixin button($color) {
@@ -15,31 +14,59 @@ $white: white;
   }
 }
 
+@mixin flex($direction: null, $justify-content: null, $align-items: null) {
+  display: flex;
+  flex-direction: $direction;
+  justify-content: $justify-content;
+  align-items: $align-items;
+}
+
+@mixin absolute($top: null, $right: null, $bottom: null, $left: null) {
+  position: absolute;
+  top: $top;
+  right: $right;
+  bottom: $bottom;
+  left: $left;
+}
+
+@mixin heightWidth($h: null, $w: null) {
+  height: $h;
+  width: $w;
+}
+
+@mixin needle($color : null, $bg-color : null, $z) {
+  transform-origin: 50% 80%;
+  color : $color;
+  background: $bg-color;
+  z-index: $z;
+}
+
+@mixin circle($h, $m) {
+  border-radius: 50%;
+  @include heightWidth($h, $m);
+}
+
 html {
-  height: 100%;
+  @include heightWidth($h: 100%);
 }
 
 body {
   background-color: $bg-color;
   box-sizing: border-box;
   font-family: sans-serif;
-  height: 100%;
+  @include heightWidth($h: 100%);
 }
 
 .container {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 100%;
+  @include flex($justify-content: space-evenly, $align-items: center);
+  @include heightWidth($h: 100%);
   @media (max-width: 768px) {
     flex-direction: column;
   }
 }
 
 .clock-area {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include flex($direction: column, $align-items: center);
   flex: 2;
   @media (max-width: 910px) {
     flex: 1;
@@ -47,15 +74,13 @@ body {
 }
 
 .clock-container {
-  background-size: cover;
+  @include heightWidth($h: 400px, $w: 400px);
+  // background-size: cover;
   margin: 0 0 50px;
   border: 5px solid $fg-color;
   background-color: $white;
-  border-radius: 50%;
   position: relative;
   padding: 5px;
-  width: 400px;
-  height: 400px;
   // @media(max-width : 910px) {
   //   width: 300px;
   //   height: 300px;
@@ -66,7 +91,6 @@ body {
   //   height: 100%;
   // }
   .digit {
-    position: absolute;
     z-index: 100;
     margin: 0;
     padding: 0;
@@ -74,96 +98,62 @@ body {
     font-size: 64px;
   }
   .twelve {
-    top: 0;
-    left: 42%;
+    @include absolute($top: 0, $left: 42%);
   }
   .three {
-    right: 2%;
-    top: 41%;
+    @include absolute($top: 41%, $right: 2%);
   }
   .six {
-    bottom: 0;
-    left: 46%;
+    @include absolute($bottom: 0, $left: 46%);
   }
   .nine {
-    left: 2%;
-    top: 41%;
+    @include absolute($top: 41%, $left: 2%);
   }
   #seconds {
-    background: $fg-color;
-    height: 40%;
-    left: 50%;
-    position: absolute;
-    top: 17.5%;
-    transform-origin: 50% 80%;
-    width: 0.5%;
-    z-index: 4;
+    @include absolute($top: 17.5%, $left: 50%);
+    @include heightWidth($h: 40%, $w: 0.5%);
+    @include needle($bg-color : $fg-color, $z : 4);
   }
   #minutes {
-    background: $fg-color;
-    height: 45%;
-    left: 49.7%;
-    position: absolute;
-    top: 13.3%;
-    transform-origin: 50% 80%;
-    width: 1.1%;
-    z-index: 3;
+    @include absolute($top: 13.3%, $left: 49.7%);
+    @include heightWidth($h: 45%, $w: 1.1%);
+    @include needle($bg-color : $fg-color, $z : 3);
   }
   #hours {
-    background: $fg-color;
-    height: 30%;
-    left: 49.5%;
-    position: absolute;
-    top: 25.5%;
-    transform-origin: 50% 80%;
-    width: 1.6%;
-    z-index: 2;
+    @include absolute($top: 25.5%, $left: 49.5%);
+    @include heightWidth($h: 30%, $w: 1.6%);
+    @include needle($bg-color : $fg-color, $z : 2);
   }
   #milli-seconds {
-    height: 25%;
-    left: 49.5%;
-    position: absolute;
-    top: 29.27%;
+    @include absolute($top: 29.27%, $left: 49.5%);
+    @include heightWidth($h: 25%);
     transform-origin: 50% 80%;
-    border : 0.5px dashed $fg-color;
+    border: 0.5px dashed $fg-color;
     z-index: 5;
   }
-  .needles-center{
-    border-radius: 50%;
-    width : 15px;
-    height: 15px;
-    background : black;
-    position: absolute;
-    top : 47.5%;
-    left : 48.5%;
-    z-index : 6;
+  .needles-center {
+    @include absolute($top: 47.5%, $left: 48.5%);
+    @include circle($h: 15px, $w: 15px);
+    background: black;
+    z-index: 6;
   }
   .digital-time {
-    height: 5%;
-    left: 38%;
-    position: absolute;
+    @include flex($justify-content: center, $align-items: center);
+    @include absolute($bottom: 27%, $left: 38%);
+    @include heightWidth($h: 5%, $w: 22%);
+    @include needle($color : $fg-color);
     border: 1px solid $fg-color;
-    bottom: 27%;
-    color : $fg-color;
     font-size: 18px;
-    transform-origin: 50% 80%;
-    padding : 4px 3px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 22%;
+    padding: 4px 3px;
   }
 }
 
 .clock-controls {
   margin: auto;
   .btn {
+    @include circle($h: 100px, $w: 100px);
     color: $white;
     font-size: 18px;
-    border-radius: 50%;
-    outline: none;
-    width: 100px;
-    height: 100px;
     transition: 0.3s ease-in;
     &:hover {
       cursor: pointer;
@@ -194,14 +184,11 @@ body {
 }
 
 .laps-container {
-  width: 80%;
-  height: 550px;
+  @include heightWidth($h: 550px, $w: 80%);
   border-radius: 10px;
   box-shadow: 4px 4px 0 0 darken($color: $bg-color, $amount: 5);
   background-color: $white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include flex($direction: column, $align-items: center);
   .laps-heading {
     font-size: 24px;
     font-weight: bold;
@@ -211,12 +198,11 @@ body {
 }
 
 .laps-list {
+  @include heightWidth($h: 75%, $w: 60%);
   color: $fg-color;
   padding: 10px 5px;
   font-size: 20px;
-  width: 60%;
   margin-top: 10px;
-  height: 75%;
   text-align: center;
   overflow-y: scroll;
   .no-lap-msg {
@@ -225,12 +211,12 @@ body {
     text-align: center;
   }
   &-item {
+    @include flex($justify-content: center);
     background-color: $text-color;
     padding: 10px 20px;
     border-radius: 20px;
     margin: 7px 0;
-    justify-content: center;
-    display: flex;
+
     @media (max-width: 1159px) {
       font-size: 16px;
     }
